fix(navbar): active styling alignment on mobile

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -150,16 +150,18 @@ header.header {
   transition: all 0.3s ease;
   position: relative;
   &::after {
+    content: '';
+    background: $secondary;
+    display: block;
+    position: absolute;
+    inset-inline-start: 0;
+    bottom: calc(($spacing-md + 3px) * -1);
+
     transition: transform 0.3s ease;
     transform: scaleX(0);
 
-    position: absolute;
-    bottom: calc(($spacing-md + 3px) * -1);
-    content: '';
-    display: block;
     width: 100%;
     height: 2px;
-    background: $secondary;
   }
   &:is(a):hover,
   &:is(.active) {
